# GUImp

./: CMakeLists.txt
frameworks/SDL2_ttf.framework/Versions/A/Frameworks/FreeType.framework/Versions/A/Headers/freetype/: freetype.h  ftadvanc.h  ftautoh.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftbzip2.h  ftcache.h  ftcffdrv.h  ftcid.h  ftgasp.h  ftglyph.h  ftgxval.h  ftgzip.h  ftincrem.h  ftlcdfil.h  ftlist.h  ftlzw.h  ftmm.h  ftmodapi.h  ftotval.h  ftoutln.h  ftpfr.h  ftrender.h  ftsizes.h  ftsnames.h  ftstroke.h  ftsynth.h  fttypes.h  ftwinfnt.h  ftxf86.h  t1tables.h  tttables.h  tttags.h  ttunpat.h
frameworks/SDL2_ttf.framework/Versions/A/Frameworks/FreeType.framework/Versions/A/Headers/freetype/config/: ftconfig.h
guimp-app/: Makefile
guimp-app/inc/: guimp.h
guimp-app/src/: main.c  main_loop.c  main_loop_events.c
guimp-app/src/fonts/: fonts.c
guimp-app/src/render/: render.c  render_button.c  render_font.c  render_text_area.c  render_window.c
guimp-app/src/utilities/: general_utilities.c  initialization_utilities.c  parent_helpers.c  vector_utilities.c
libft/: Makefile  t_vector_logic.c
libft/includes/: libft.h
libui/: Makefile
libui/inc/: e_items.h  libui.h  t_button_item.h  t_font.h  t_item.h  t_sdl_events.h  t_text_area.h  t_window.h
libui/src/: func.c
libui/src/events/: standart_button_event_handler.c  standart_event_handler.c
libui/src/items/: button.c  text_area.c
libui/src/utils/: g_assert.c
libui/src/windows/: empty_window.c
